[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "buildbot_grouped_builders_plugin"
version = "0.0.1"
authors = [
  { name="Michael Pollmeier", email="michael@michaelpollmeier.com" },
]
description = "buildbot grouped builders"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Apache2"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/mpollmeier/buildbot-grouped-builders"
